Implementando painel de exibição dos fonemas

--- a/AFIEnglishOnly/app/src/main/res/values/strings.xml
+++ b/AFIEnglishOnly/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">AFI English Only</string>
+    <string name="underline"><u>Curtas</u></string>
 </resources>
