definindo separação de fonemas por categoria

--- a/AFI10/app/src/main/res/values/strings.xml
+++ b/AFI10/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">AFI10</string>
+    <string name="st_about" />
+    <string name="st_professor" />
+    <string name="st_student" />
+    <string name="st_project" />
 </resources>
