App faltando inserir sons de fonemas restantes

--- a/AFI10/app/src/main/res/values/strings.xml
+++ b/AFI10/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">AFI10</string>
+    <string name="app_name">AFI English Only</string>
     <string name="st_about" />
     <string name="st_professor" />
     <string name="st_student" />
